--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
+
+target/
+**/target
+
 ### IntelliJ IDEA ###
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+.idea
+
 
 ### Eclipse ###
 .apt_generated
