--- a/experiment/pom.xml
+++ b/experiment/pom.xml
@@ -19,6 +19,15 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.nisus.baotool</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
