--- a/test-service/pom.xml
+++ b/test-service/pom.xml
@@ -22,11 +22,23 @@
     </properties>
 
     <dependencies>
+        <!--<editor-fold desc="本项目内模块">-->
         <dependency>
             <groupId>com.nisus.baotool</groupId>
             <artifactId>core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.nisus.baotool</groupId>
+            <artifactId>util</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.nisus.baotool</groupId>
+            <artifactId>experiment</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <!--</editor-fold>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
