--- a/test-service/pom.xml
+++ b/test-service/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>experiment</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.nisus.baotool</groupId>
+            <artifactId>easy-web-boot-starter</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
         <!--</editor-fold>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
