--- a/test-service/pom.xml
+++ b/test-service/pom.xml
@@ -143,6 +143,10 @@
             <artifactId>annotations</artifactId>
             <version>23.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
