--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -14,10 +14,10 @@ jobs:
       - name: Set up Java for publishing to GitHub Packages
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '8'
           distribution: 'adopt'
       - name: Publish to GitHub Packages
-        run: mvn --batch-mode deploy -DskipTests -Prelease-github
+        run: mvn --batch-mode deploy -DskipTests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   release:
@@ -34,7 +34,7 @@ jobs:
       - name: Release Maven package
         uses: samuelmeuli/action-maven-publish@v1
         with:
-          maven_profiles: 'release-ossrh'
+#          maven_profiles: 'release-ossrh'
           maven_args: '-DskipTests'
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
 #          gpg_passphrase: ${{ secrets.GPG_PASSPHRASE }}
