--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>io.github.abandno</groupId>
         <artifactId>easy-web</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>core</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
     <name>core</name>
 
