--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.github.abandno</groupId>
     <artifactId>easy-web</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
     <name>Easy Web</name>
     <description>Easy Web</description>
@@ -228,7 +228,8 @@
         <repository>
             <!--这两个id需要和setting.xml文件中的server字段的id进行对应-->
             <id>oss</id>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <!--<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
+            <url>https://s01.oss.sonatype.org/content/repositories/releases</url>
         </repository>
         <snapshotRepository>
             <id>oss</id>
