--- a/test-service/pom.xml
+++ b/test-service/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.github.abandno</groupId>
         <artifactId>easy-web</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>test-service</artifactId>
@@ -26,22 +26,22 @@
         <dependency>
             <groupId>io.github.abandno</groupId>
             <artifactId>core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>io.github.abandno</groupId>
             <artifactId>util</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>io.github.abandno</groupId>
             <artifactId>experiment</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>io.github.abandno</groupId>
             <artifactId>easy-web-boot-starter</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
         <!--</editor-fold>-->
         <dependency>
