--- a/web-util/pom.xml
+++ b/web-util/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.github.abandno</groupId>
         <artifactId>easy-web</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>web-util</artifactId>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>io.github.abandno</groupId>
             <artifactId>util</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
