--- a/pom.xml
+++ b/pom.xml
@@ -228,8 +228,8 @@
         <repository>
             <!--这两个id需要和setting.xml文件中的server字段的id进行对应-->
             <id>oss</id>
-            <!--<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
-            <url>https://s01.oss.sonatype.org/content/repositories/releases</url>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <!--<url>https://s01.oss.sonatype.org/content/repositories/releases</url>-->
         </repository>
         <snapshotRepository>
             <id>oss</id>
@@ -310,7 +310,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>oss</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
